--- a/order-form.html
+++ b/order-form.html
@@ -1130,14 +1130,15 @@
                 </footer>
             </div>
 
-            <div class="popup-tgiven-wrapp">
-                <div onclick="closeGivenPopup()" class="exit-popup-close"></div>
-                <div class="tgiven-img"><img src="./img/Mask group-given.png" alt=""></div>
-                <div class="tgiven-txt">Ура! Мы получили Ваш заказ!</div>
-                <div class="tgiven-desc">В течении 24 Часов на Ваш email придет трек номер с помощью которого вы сможете отслеживать Ваш заказ</div>
-            </div>
-            <div class="bg-popup"></div>
+
     </main>
+    <div class="popup-tgiven-wrapp">
+        <div onclick="closeGivenPopup()" class="exit-popup-close exit-popup-close-order-form"></div>
+        <div class="tgiven-img"><img src="./img/Mask group-given.png" alt=""></div>
+        <div class="tgiven-txt">Ура! Мы получили Ваш заказ!</div>
+        <div class="tgiven-desc">В течении 24 Часов на Ваш email придет трек номер с помощью которого вы сможете отслеживать Ваш заказ</div>
+    </div>
+    <div class="bg-popup"></div>
     <script src="./js/main.js"></script> 
 </body>
 </html>
