add catalog search

--- a/catalog.html
+++ b/catalog.html
@@ -785,6 +785,12 @@
                                 <path d="M15 1L8 7L1 1" stroke="#695D54" stroke-width="1.5" stroke-linecap="round"/>
                             </svg>                                
                         </div>
+                        <div class="catalog-filter-row-search">
+                            <input type="text" name="" id="" placeholder="Поиск">
+                            <div class="header-serach-button">
+                                <img src="/img/search.svg" alt="">
+                            </div>
+                        </div>
                         <div class="catalog-filter-row-items" style="display:none">
                             <div class="catalog-filter-item">
                                 <div class="home-bottom-form-checkbox catalog-filter-item-check">
