--- a/bonus-s.html
+++ b/bonus-s.html
@@ -766,8 +766,8 @@
                 </div>
                 <div class="section-bonus-give-wrapp-item">
                     <div class="bonus-circle">
-                        <p>+ 200 </p>
-                        <span class="bonus-circle-under-txt">бонусов</span>
+                        <p>+ 200   </p>
+                        <p class="bonus-circle-under-txt">бонусов</p>
                     </div>
                     <div class="bonus-desc">
                         Как только Вы зарегистрируетесь в системе лояльности, мы подарим Вам приветственные 200 бонусов, тратьте с удовольствием! 
@@ -834,7 +834,7 @@
                             <p><img src="./img/image 335.png" alt=""></p>
                         </div>
                         <div class="cash-level-blc-txt"> 
-                            <span class="cash-level-blc-txt-stl">9% </span>при накопленной сумме покупок 15.000Р
+                            <span class="cash-level-blc-txt-stl">9% </span>при накопленной сумме покупок <br> 15.000Р
                         </div>
                     </div>
                     <div class="cash-level-blc">
