--- a/change-pass.html
+++ b/change-pass.html
@@ -768,8 +768,11 @@
                 </div>
             </div>
         </div>
-        <div class="user-data-container container">
-            <div class="user-data-links-wrapp">
+        <div class="user-data-container-pass container">
+            <div class="user-data-links-wrapp-pass">
+                <div class="user-data-links-title">
+                    личный кабинет
+                </div>
                 <ul class="user-data-list">
                     <li class="user-data-link user-data-link-first-el">Личные данные</li>
                     <li class="user-data-link ">Мои заказы</li>
@@ -779,7 +782,7 @@
                 </ul>
             </div>
             
-            <div class="user-data-form-wrapp user-form-pass-wrapp-pass">
+            <div class=" user-form-pass-wrapp-pass">
                 <form  action="">
                    <div class="user-form-pass-wrapp ">
                         <div class="user-data-input-container user-data-input-container-pass "><label for="us-dt-n">Текущий пароль</label><input id="us-dt-n" type="text" placeholder=""></div>
