--- a/my-review.html
+++ b/my-review.html
@@ -773,7 +773,7 @@
         <div class="user-data-container container">
             <div class="user-data-links-wrapp user-order-link-stl-review">
                 <ul class="user-data-list">
-                    <li class="user-data-link ">Изменить пароль</li>
+                    <li class="user-data-link ">Личные данные</li>
                     <li class="user-data-link ">Мои заказы</li>
                     <li class="user-data-link ">Изменить пароль</li>
                     <li class="user-data-link user-data-link-open">Мои отзывы</li>
