--- a/index.html
+++ b/index.html
@@ -2702,7 +2702,9 @@
         </div>
     </div>
 
-    <div class="right-popup-cont cart">
+    <!-- Hide for a litle time -->
+
+    <div   class="right-popup-cont cart ">
         <div class="right-popup cart">
             <div class="right-popup-exit">
                 <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -3304,7 +3306,78 @@
             </div>
         </div>
     </div>
-
+    <div style="display: none;"  class="right-popup-cont cart right-popup-cont-buy">
+        <div class="right-popup ">
+            <div class="right-popup-exit">
+                <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M11.3957 1.81286C11.7295 1.47912 11.7295 0.938023 11.3957 0.604286C11.062 0.270548 10.5209 0.270548 10.1871 0.604286L6 4.79143L1.81286 0.604285C1.47912 0.270547 0.938023 0.270548 0.604286 0.604286C0.270548 0.938023 0.270548 1.47912 0.604286 1.81286L4.79143 6L0.604285 10.1871C0.270547 10.5209 0.270548 11.062 0.604286 11.3957C0.938023 11.7295 1.47912 11.7295 1.81286 11.3957L6 7.20857L10.1871 11.3957C10.5209 11.7295 11.062 11.7295 11.3957 11.3957C11.7295 11.062 11.7295 10.5209 11.3957 10.1871L7.20857 6L11.3957 1.81286Z" fill="#353430"/>
+                </svg>  
+            </div>
+            <div class="right-popup-buy-wrapp">
+                <div class="right-popup-title-buy">
+                    Покупайте со скидкой:
+                </div>
+                <div class="right-popup-desc-buy">
+                    Получайте бонусы и оплачивайте ими до 30% заказа Зарегистрируйтесь, чтобы мы подарили 200 приветственных бонусов, а Вы выбирали подарки к каждому заказу и оплачивали покупки подарочным сертификатом
+                </div>
+                <div class="right-popup-log-buy">
+                    Войти или зарегистрироваться
+                </div>
+                <div class="right-popup-underdesc-buy ">
+                    Продолжить без подарков и бонусов
+                </div>
+            </div>
+        </div>
+    </div> 
+    <div style="display: none;"  class="right-popup-cont cart right-popup-cont-enter">
+        <div class="right-popup cart">
+            <div class="right-popup-exit">
+                <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M11.3957 1.81286C11.7295 1.47912 11.7295 0.938023 11.3957 0.604286C11.062 0.270548 10.5209 0.270548 10.1871 0.604286L6 4.79143L1.81286 0.604285C1.47912 0.270547 0.938023 0.270548 0.604286 0.604286C0.270548 0.938023 0.270548 1.47912 0.604286 1.81286L4.79143 6L0.604285 10.1871C0.270547 10.5209 0.270548 11.062 0.604286 11.3957C0.938023 11.7295 1.47912 11.7295 1.81286 11.3957L6 7.20857L10.1871 11.3957C10.5209 11.7295 11.062 11.7295 11.3957 11.3957C11.7295 11.062 11.7295 10.5209 11.3957 10.1871L7.20857 6L11.3957 1.81286Z" fill="#353430"/>
+                </svg>  
+            </div>
+            <div class="right-popup-enter-wrapp">
+                <div class="right-popup-title-enter">
+                    Войти или зарегистрироваться
+                </div>
+                <div class="right-popup-desc-enter">
+                    Мы отправим на номер SMS-сообщение с кодом подтверждения.
+                </div>
+                <div class="rigth-popup-inp">
+                    <input type="tel" name="" id="" placeholder="Телефон">
+                </div>
+                <div class="right-popup-log-enter">
+                    Получить код
+                </div>
+            </div>
+        </div>
+    </div> 
+    <div style="display: none;"  class="right-popup-cont cart right-popup-cont-agree">
+        <div class="right-popup cart">
+            <div class="right-popup-exit">
+                <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M11.3957 1.81286C11.7295 1.47912 11.7295 0.938023 11.3957 0.604286C11.062 0.270548 10.5209 0.270548 10.1871 0.604286L6 4.79143L1.81286 0.604285C1.47912 0.270547 0.938023 0.270548 0.604286 0.604286C0.270548 0.938023 0.270548 1.47912 0.604286 1.81286L4.79143 6L0.604285 10.1871C0.270547 10.5209 0.270548 11.062 0.604286 11.3957C0.938023 11.7295 1.47912 11.7295 1.81286 11.3957L6 7.20857L10.1871 11.3957C10.5209 11.7295 11.062 11.7295 11.3957 11.3957C11.7295 11.062 11.7295 10.5209 11.3957 10.1871L7.20857 6L11.3957 1.81286Z" fill="#353430"/>
+                </svg>  
+            </div>
+            <div class="right-popup-agree-wrapp">
+                <div class="right-popup-title-agree">
+                    подтвердите номер
+                </div>
+                <div class="right-popup-agree-tel">
+                    +7 (913) 815-26-80
+                </div>
+                <div class="rigth-popup-agree-inp">
+                    <input type="tel" name="" id="" placeholder="Код из SMS">
+                </div>
+                <div class="right-popup-desc-agree">
+                    отправить код повторно
+                </div>
+                <div class="right-popup-log-agree">
+                    Подтвердить телефон
+                </div>
+            </div>
+        </div>
+    </div> 
     <script src="/js/main.js"></script>
 </body>
 </html>
