--- a/catalog.html
+++ b/catalog.html
@@ -1263,11 +1263,19 @@
                             </span>
                             <input type="number" value="9">
                         </div>
-                        <select name="" id="" class="catalog-top-sort">
-                            <option value="">По популярности</option>
-                            <option value="">По цене</option>
-                            <option value="">По новизне</option>
-                        </select>
+                        <div name="" id="" class="catalog-top-sort">
+                            <div value="">По популярности</div>
+                            <div class="header-button-profile-drop">
+                                <div>
+                                    <a href="">
+                                        По цене
+                                    </a>
+                                    <a href="">
+                                        По дате
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="catalog-products">
                         <div class="stock-block-product">
