--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <link rel="stylesheet" href="/fonts_new/stylesheet.css">
     <!--<link rel="stylesheet" href="/fonts/stylesheet.css">-->
-    <link rel="stylesheet" href="/css/cart.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/cart.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="mob-bottom-menu">
